--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,9 +18,5 @@
         "titleBar.inactiveBackground": "#83256199",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#832561",
-    "cSpell.words": [
-        "apibr",
-        "guibranco"
-    ]
+    "peacock.color": "#832561"
 }
