--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "sonarlint.connectedMode.project": {
+        "connectionId": "guibranco-github",
+        "projectKey": "guibranco_ZeroCool"
+    },
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#ab307e",
         "activityBar.background": "#ab307e",
